--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
         <h2>About Me</h2>
     </div>
 
+    <!-- Add Responsive Helper with Video -->
+    <div class="embed-responsive embed-responsive-16by9">
+        <!-- <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=XQu8TTBmGhA/?rel=0" allowfullscreen></iframe> -->
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/XQu8TTBmGhA" frameborder="0" allowfullscreen></iframe>
+    </div>
+
     <div id="footer">
         <a href="mailto:you@yourdomain.com">
             <p id="email">you@yourdomain.com</p>
