--- a/portfolio.html
+++ b/portfolio.html
@@ -48,14 +48,36 @@
         </div>
     </nav>
 
+    <div class="container">
+        <div class="jumbotron">
 
-    <div id="header">
-        <h1 id="name">Your Name</h1>
+            <div id="header">
+                <h1 id="name">Your Name</h1>
+            </div>
+        </div>
     </div>
 
-    <div>
-        <h2>Portfolio</h2>
-    </div>
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner" role="listbox">
+              <div class="carousel-item active">
+                <img class="d-block img-fluid" src="http://lorempixel.com/1920/800/cats" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block img-fluid" src="http://lorempixel.com/1920/800/animals" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block img-fluid" src="http://lorempixel.com/1920/800/nature" alt="Third slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
 
     <div id="footer">
         <a href="mailto:you@yourdomain.com">
