--- a/resume.html
+++ b/resume.html
@@ -11,79 +11,89 @@
     <link href="main.css" rel="stylesheet" type="text/css">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
+        crossorigin="anonymous">
 </head>
 
 <body>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>        
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
+        crossorigin="anonymous"></script>
 
-        
+
     <!-- Navbar code goes here -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+            aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="resume.html">Resume</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="portfolio.html">Portfolio</a>
-            </li>
-          </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="resume.html">Resume</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                </li>
+            </ul>
         </div>
-      </nav>
+    </nav>
 
-    <div id="header">
-        <h1 id="name">Your Name</h1>
-    </div>
+    <div class="container-fluid">
 
-    <div>
-        <br>    
-        <h2>Objective</h2>
-        <p>To take a position as a software engineer.</p>
-        
-        <h2>Experience</h2>
-        <p>Junior Developer, Software Company (2017 - Present)</p>
-        <ul>
-            <li>Designed and implemented end-user features for Flagship Product</li>
-            <li>Wrote third-party JavaScript and Ruby libraries</li>
-        </ul>
+        <div id="header">
+            <h1 id="name">Your Name</h1>
+        </div>
 
-        <h2>Skills</h2>
-        <p>Languages: C#, JavaScript, Python, Ruby</p>
-        <p>Frameworks: .NET, Node.js, Django, Ruby on Rails</p>
+        <div>
+            <br>
+            <h2>Objective</h2>
+            <p>To take a position as a software engineer.</p>
 
-        <h2>Education</h2>
-        <p>My Highschool, expected graduation 2020</p>
-        <ul>
-            <li><h5>Awards:</h5>
-                <ul>
-                    <li>1st Place Science Fair</li>
-                </ul>
-            </li>
-            <li><h5>Clubs:</h5>
-                <ul>
-                    <li>SkillsUSA</li>
-                    <li>Beta</li>
-                </ul>
-            </li>
-        </ul>
-    </div>
+            <h2>Experience</h2>
+            <p>Junior Developer, Software Company (2017 - Present)</p>
+            <ul>
+                <li>Designed and implemented end-user features for Flagship Product</li>
+                <li>Wrote third-party JavaScript and Ruby libraries</li>
+            </ul>
 
-    <div id="footer">
-        <a href="mailto:you@yourdomain.com">
-            <p id="email">you@yourdomain.com</p>
-        </a>
+            <h2>Skills</h2>
+            <p>Languages: C#, JavaScript, Python, Ruby</p>
+            <p>Frameworks: .NET, Node.js, Django, Ruby on Rails</p>
+
+            <h2>Education</h2>
+            <p>My Highschool, expected graduation 2020</p>
+            <ul>
+                <li>
+                    <h5>Awards:</h5>
+                    <ul>
+                        <li>1st Place Science Fair</li>
+                    </ul>
+                </li>
+                <li>
+                    <h5>Clubs:</h5>
+                    <ul>
+                        <li>SkillsUSA</li>
+                        <li>Beta</li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+
+        <div id="footer">
+            <a href="mailto:you@yourdomain.com">
+                <p id="email">you@yourdomain.com</p>
+            </a>
+        </div>
     </div>
 
 </body>
