--- a/resume.html
+++ b/resume.html
@@ -48,7 +48,7 @@
         </div>
     </nav>
 
-    <div class="container-fluid">
+    <div class="container">
 
         <div id="header">
             <h1 id="name">Your Name</h1>
